--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -37,7 +37,7 @@
                 }
                 &__name {
                     padding: 8px 0;
-                    border: 1px solid rgba(255, 255, 255, 0.5);
+                    border-top: 1px solid rgba(255, 255, 255, 0.5);
                     font-weight: 800;
                     font-size: 16.5704px;
                     line-height: 21px;
