--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -10,6 +10,7 @@
 @import "components/buttons";
 @import "components/composition";
 @import "components/modal";
+@import "components/menu";
 
 @import "layout/layout";
 
