--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -160,6 +160,7 @@
                 a {
                     font-size: 24px;
                     line-height: 29px;
+                    font-weight: bold;
 
                     &::first-letter {
                         color: $green;
