Sign Up / Country list / Changed the arrow icon color

--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -208,9 +208,8 @@
     }
 }
 
-.css-tj5bde-Svg {
-    color: black !important;
-}
-.css-1gtu0rj-indicatorContainer {
-    color: black !important;
+#signup-country-dropdown {
+    svg {
+        color: black !important;
+    }
 }
