Verify / Changed the identity document / FIxed the issues on small desktops

--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -135,3 +135,9 @@
         right: 0;
     }
 }
+
+// input[type="search"]::-webkit-search-cancel-button {
+//     content: "x";
+//     color: black !important;
+//     background-image: none;
+// }
