--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -39,3 +39,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .z-n999 {
     z-index: -999 !important;
 }
+
+.cursor-pointer {
+    cursor: pointer !important;
+}
