Menu / DropDown Menu / Changed the bg color

--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -10,7 +10,7 @@
     .user-dropdown-menu {
         position: absolute;
         top: 80px;
-        background-color: black;
+        background-color: darken($black, 3%);
         border-radius: 5px;
         z-index: 999;
         font-variant: small-caps;
