--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -73,7 +73,7 @@
                 margin: 0 auto;
                 .css-1s2u09g-control,
                 .css-1pahdxg-control {
-                    @extend %selectStyle;
+                    @extend %select-style;
                     padding-top: 7px;
                     padding-bottom: 7px;
                 }
