--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -1,6 +1,6 @@
 .verify-page {
     section {
-        @extend %setHeight2;
+        @extend %set-height2;
         overflow: auto;
         .trees-img {
             display: block;
