--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -5,7 +5,6 @@
     padding: 22px;
     background-color: $black;
     z-index: 9999;
-    margin-bottom: 25px;
 
     .sign-in {
         margin-right: 30px;
@@ -21,9 +20,9 @@
         padding: 15px 0;
     }
 
-    .container {
-        max-width: 100%;
-    }
+    // .container {
+    //     max-width: 100%;
+    // }
 
     .menu__logo {
         svg {
