--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -1,5 +1,5 @@
 .home-page {
-    @extend %setHeight;
+    @extend %set-height;
     .menu {
         background-color: transparent;
     }
@@ -8,7 +8,7 @@
         opacity: 0.4;
     }
     .home-section {
-        @extend %setHeight2;
+        @extend %set-height2;
         display: flex;
         align-items: center;
         text-align: center;
