--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -1,5 +1,5 @@
 .profile-page {
-    @extend %setHeight2;
+    @extend %set-height2;
     .figure-section {
         max-width: 992px;
         margin: 0 auto;
