--- a/src/styles/sass/utils/_mixins.scss
+++ b/src/styles/sass/utils/_mixins.scss
@@ -1,3 +1,5 @@
+// Mixins
+
 @mixin mq($width, $type: min) {
     @if map_has_key($breakpoints, $width) {
         $width: map_get($breakpoints, $width);
@@ -10,24 +12,42 @@
     }
 }
 
-%setHeight {
+@mixin custom-scroll($height) {
+    max-height: calc(100vh - $height);
+    padding-right: 26px;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+        width: 6px;
+        height: 0px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: #464646;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: white;
+    }
+}
+
+//Placeholders
+
+%set-height {
     overflow: hidden;
     height: 100vh;
     width: 100vw;
-    @include mq("tablet", max) {
+    @include mq("laptop", max) {
         overflow: auto;
         position: relative;
     }
 }
 
-%setHeight2 {
-    height: calc(100vh - 122px);
+%set-height2 {
+    height: calc(100vh - 97px);
     @include mq("phone", max) {
-        height: calc(100vh - 82px);
+        height: calc(100vh - 55px);
     }
 }
 
-%selectStyle {
+%select-style {
     border: 1px solid white;
     border-radius: unset;
     background-color: $black;
