--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -43,3 +43,6 @@ input[type="number"]::-webkit-outer-spin-button {
 .cursor-pointer {
     cursor: pointer !important;
 }
+.border-transparent {
+    border-color: transparent !important;
+}
