DressUP / Finished the hair section and also exported the horizontal list as a separate component for clean code stuff

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -46,3 +46,10 @@ input[type="number"]::-webkit-outer-spin-button {
 .border-transparent {
     border-color: transparent !important;
 }
+.overflow-x-auto {
+    overflow-x: auto !important;
+    white-space: nowrap;
+}
+.overflow-y-hidden {
+    overflow-y: hidden !important;
+}
